--- a/modulo1/projeto-whatslab/whatslab/src/App.css
+++ b/modulo1/projeto-whatslab/whatslab/src/App.css
@@ -1,8 +1,8 @@
-.sendMessage {
-  display: flex;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+ul {
+  padding: 0;
+  max-width: 700px;
+  margin: 0 auto; 
+  height: 90vh;
 }
 
 .inputBox {
@@ -10,7 +10,9 @@
   width: 100%;
   box-sizing: border-box;
   display: flex;
-  font-family: serif;
+  position: fixed;
+  bottom: 0;
+  border: 3px solid #fff;
 }
 
 .firstInput {
@@ -18,11 +20,26 @@
   padding: 10px;
   border: 1px solid #ebebeb;
   font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  color: #c0c0c0;
 }
 
 .secondInput {
   width: 60%; 
+  height: 20px;
   padding: 10px 44px 10px 10px;
   border: 1px solid #ebebeb;
   font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  color: #c0c0c0;
+}
+
+button{
+  background-color: #fff;
+  width: 10%;
+  border: none;
+}
+
+button img {
+  height: 30px;
 }
