alterado cor da font do form

--- a/modulo1/projeto-whatslab/whatslab/src/App.css
+++ b/modulo1/projeto-whatslab/whatslab/src/App.css
@@ -21,7 +21,7 @@ ul {
   border: 1px solid #ebebeb;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
-  color: #c0c0c0;
+  color: #3D434C;
 }
 
 .secondInput {
@@ -31,7 +31,7 @@ ul {
   border: 1px solid #ebebeb;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
-  color: #c0c0c0;
+  color:#3D434C;
 }
 
 button{
